--- a/content/posts/2019-11-12-jane-5.0-released.md
+++ b/content/posts/2019-11-12-jane-5.0-released.md
@@ -1,5 +1,5 @@
 +++
-title = "Jane 5.0 has been released! 🍾"
+title = "🎉 Jane 5.0 has been released! 🍾"
 date = "2019-11-12"
 tags = ["php", "jane"]
 +++
