--- a/content/posts/2020-01-23-jane-5.3-performances-auth.md
+++ b/content/posts/2020-01-23-jane-5.3-performances-auth.md
@@ -1,5 +1,5 @@
 +++
-title = "Jane v5.3: Performances, Authentication & OpenAPI 2!"
+title = "🎉 Jane v5.3: Performances, Authentication & OpenAPI 2!"
 date = "2020-01-23"
 tags = ["php", "jane"]
 +++
